Update tests to use parametrized format