@@ -7,6 +7,9 @@ package cz.cvut.fel.cinetrack.service;
 import cz.cvut.fel.cinetrack.model.Language;
 import cz.cvut.fel.cinetrack.repository.LanguageRepository;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.ComponentScan;
@@ -15,7 +18,9 @@ import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -32,63 +37,141 @@ public class LanguageServiceTest {
     @Autowired
     private LanguageRepository languageRepository;
 
-    @Test
-    void getOrCreateLanguage_WhenNullInput_ReturnEmptyList() {
-        List<Language> languages = languageService.getOrCreateLanguage(null);
+    @ParameterizedTest
+    @MethodSource("provideEmptyLanguageLists")
+    void getOrCreateLanguage_WhenNullOrEmptyInput_ReturnEmptyList(List<String> input) {
+        List<Language> languages = languageService.getOrCreateLanguage(input);
 
         assertNotNull(languages);
         assertTrue(languages.isEmpty());
     }
 
-    @Test
-    void getOrCreateLanguage_WhenEmptyList_ReturnEmptyList() {
-        List<Language> languages = languageService.getOrCreateLanguage(List.of());
+    private static Stream<Arguments> provideEmptyLanguageLists() {
+        return Stream.of(
+                Arguments.of(Collections.emptyList()),
+                Arguments.of(List.of("")),
+                Arguments.of(List.of(" ", " ")),
+                Arguments.of(Arrays.asList(null, ""))
+        );
+    }
 
-        assertNotNull(languages);
-        assertTrue(languages.isEmpty());
+    @ParameterizedTest
+    @MethodSource("provideLanguageScenarios")
+    void getOrCreateLanguage_WhenNewLanguages_CreatesAndReturnsThem(
+            List<String> inputLanguages,
+            List<String> preExistingLanguages,
+            int expectedResultSize,
+            int expectedDBSize,
+            List<String> expectedLanguages
+    ) {
+        if (preExistingLanguages != null && !preExistingLanguages.isEmpty()) {
+            preExistingLanguages.forEach(languageName -> {
+                Language existingLanguage = new Language();
+                existingLanguage.setLang(languageName);
+                languageRepository.save(existingLanguage);
+            });
+        }
+        List<Language> result = languageService.getOrCreateLanguage(inputLanguages);
+
+        assertNotNull(result);
+        assertEquals(expectedResultSize, result.size());
+
+        if (expectedLanguages != null) {
+            for (String expectedLanguage : expectedLanguages) {
+                assertTrue(result.stream().anyMatch(lang -> expectedLanguage.equals(lang.getLang())),
+                        "Missing language: " + expectedLanguage);
+            }
+        }
+
+        assertEquals(expectedDBSize, languageRepository.count());
+    }
+
+    private static Stream<Arguments> provideLanguageScenarios() {
+        return Stream.of(
+                // Test 1: New genres
+                Arguments.of(
+                        Arrays.asList("English", "Spanish", "French"),
+                        null,
+                        3,
+                        3,
+                        Arrays.asList("English", "Spanish", "French")
+                ),
+                // Test 2: Mix existing with new genres
+                Arguments.of(
+                        Arrays.asList("English", "Spanish", "French"),
+                        Arrays.asList("English"),
+                        3,
+                        3,
+                        Arrays.asList("English", "Spanish", "French")
+                ),
+                // Test 3: Duplicate names in input
+                Arguments.of(
+                        Arrays.asList("English", "English", "French"),
+                        null,
+                        2,
+                        2,
+                        Arrays.asList("English", "French")
+                ),
+                // Test 4: All genres already exist
+                Arguments.of(
+                        Arrays.asList("English", "Spanish"),
+                        Arrays.asList("English", "Spanish"),
+                        2,
+                        2,
+                        Arrays.asList("English", "Spanish")
+                )
+        );
     }
 
     @Test
-    void getOrCreateLanguage_WhenNewLanguages_CreatesAndReturnsThem() {
-        List<String> languageNames = Arrays.asList("English", "Spanish", "Korean");
-        List<Language> languages = languageService.getOrCreateLanguage(languageNames);
+    void getOrCreateLanguages_WhenContainsEmptyString_FiltersThemOut() {
+        List<String> input = Arrays.asList("English", "", "Spanish", null);
+        List<Language> result = languageService.getOrCreateLanguage(input);
 
-        assertNotNull(languages);
-        assertEquals(3, languages.size());
-        assertTrue(languages.stream().anyMatch(l -> "English".equals(l.getLang())));
-        assertTrue(languages.stream().anyMatch(l -> "Spanish".equals(l.getLang())));
-        assertTrue(languages.stream().anyMatch(l -> "Korean".equals(l.getLang())));
-
-        List<Language> dbLanguages = languageRepository.findAll();
-        assertEquals(3, dbLanguages.size());
-    }
-
-    @Test
-    void getOrCreateLanguage_WhenMixedExistingAndNewLanguages_ReturnsAll() {
-        Language existingLanguage = new Language();
-        existingLanguage.setLang("English");
-        languageRepository.save(existingLanguage);
-
-        List<String> languageNames = Arrays.asList("English", "Spanish", "Korean");
-        List<Language> languages = languageService.getOrCreateLanguage(languageNames);
-
-        assertEquals(3, languages.size());
-        assertTrue(languages.stream().anyMatch(l -> "English".equals(l.getLang())));
-        assertTrue(languages.stream().anyMatch(l -> "Spanish".equals(l.getLang())));
-        assertTrue(languages.stream().anyMatch(l -> "Korean".equals(l.getLang())));
-
-        long count = languageRepository.count();
-        assertEquals(3, count);
-    }
-
-    @Test
-    void getOrCreateLanguage_WhenDuplicateNamesInput_HandlesCorrectly() {
-        List<String> languageNames = Arrays.asList("English", "English", "Korean");
-        List<Language> languages = languageService.getOrCreateLanguage(languageNames);
-
-        assertEquals(2, languages.size());
+        assertEquals(2, result.size());
+        assertTrue(result.stream().anyMatch(lang -> "English".equals(lang.getLang())));
+        assertTrue(result.stream().anyMatch(lang -> "Spanish".equals(lang.getLang())));
         assertEquals(2, languageRepository.count());
-        assertTrue(languages.stream().anyMatch(l -> "English".equals(l.getLang())));
-        assertTrue(languages.stream().anyMatch(l -> "Korean".equals(l.getLang())));
+    }
+
+    @Test
+    void getOrCreateLanguages_WhenCallMultipleTimes_IsIdempotent() {
+        List<String> input = Arrays.asList("English", "Spanish");
+
+        List<Language> firstResult = languageService.getOrCreateLanguage(input);
+        long firstDBCount = languageRepository.count();
+
+        List<Language> secondResult = languageService.getOrCreateLanguage(input);
+        long secondDBCount = languageRepository.count();
+
+        List<Language> thirdResult = languageService.getOrCreateLanguage(input);
+        long thirdDBCount = languageRepository.count();
+
+        assertEquals(2, firstResult.size());
+        assertEquals(2, secondResult.size());
+        assertEquals(2, thirdResult.size());
+
+        assertEquals(firstDBCount, secondDBCount);
+        assertEquals(secondDBCount, thirdDBCount);
+        assertEquals(2, firstDBCount);
+    }
+
+    @Test
+    void getOrCreateLanguage_WithLargeNumberOfLanguages_HandlesCorrectly() {
+        List<String> input = Arrays.asList(
+                "English", "Spanish", "French", "German", "Italian",
+                "Portuguese", "Russian", "Japanese", "Chinese", "Korean",
+                "Arabic", "Hindi", "Dutch", "Swedish", "Norwegian",
+                "Danish", "Finnish", "Polish", "Czech", "Slovak"
+        );
+        List<Language> result = languageService.getOrCreateLanguage(input);
+
+        assertEquals(20, result.size());
+        assertEquals(20, languageRepository.count());
+
+        for (String language: input) {
+            assertTrue(result.stream().anyMatch(lang -> language.equals(lang.getLang())),
+                    "Missing language: " + language);
+        }
     }
 }
